<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="310dp"
    android:layout_height="236dp"
    android:background="@drawable/bg_corners_white">

    <TextView
        android:id="@+id/popup_window_set_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/my_folder_set_name"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/popup_window_set_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/popup_window_set_name_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/noto_sans_korean"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="0dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/my_folder_name"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@color/blue"
        android:textSize="15sp"
        android:theme="@style/EditTheme"
        app:layout_constraintBottom_toTopOf="@+id/popup_window_set_name_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_window_set_name_tv"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/popup_window_set_name_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_change_name"
        android:letterSpacing="-0.09"
        android:padding="0dp"
        android:text="@string/check"
        android:textColor="#b0def0"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_window_set_name_et"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>